objects/ssot__FinancialAssetPortfolioTargetAllocation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActualAmount__c</fullName>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActualLastUpdatedDateTime__c</fullName>
        <label>Actual Last Updated Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ActualPercent__c</fullName>
        <label>Actual Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialHoldingClass__c</fullName>
        <label>Financial Holding Class</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialHoldingSector__c</fullName>
        <label>Financial Holding Sector</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialHoldingSubClass__c</fullName>
        <label>Financial Holding Sub Class</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Financial Asset Portfolio Tgt Alloc Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NegativeToleranceAmount__c</fullName>
        <label>Negative Tolerance Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PositiveToleranceAmount__c</fullName>
        <label>Positive Tolerance Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceTargetId__c</fullName>
        <label>Reference Target</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceTargetObject__c</fullName>
        <label>Reference Target Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TargetPercent__c</fullName>
        <label>Target Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VarianceAmount__c</fullName>
        <label>Variance Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VariancePercent__c</fullName>
        <label>Variance Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>